--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:text="04/07/1991"
         android:hint="@string/edtNascimento"
         android:inputType="date" />
 
@@ -22,4 +23,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btnProximo"/>
+
+    <Button
+        android:id="@+id/btnPostos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnPostos"/>
 </LinearLayout>
