--- a/app/src/main/res/layout/activity_vacinas.xml
+++ b/app/src/main/res/layout/activity_vacinas.xml
@@ -11,8 +11,7 @@
     <ProgressBar
         android:id="@+id/pgrBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <ListView
         android:id="@+id/lstVacinas"
