--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,33 @@
     android:gravity="center_vertical|center_horizontal"
     tools:context="br.com.recife.vacina.vacinarecife.activity.MainActivity">
 
-    <EditText
-        android:id="@+id/edtNascimento"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:background="?attr/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:text="04/07/1991"
-        android:hint="@string/edtNascimento"
-        android:inputType="date" />
+        android:minHeight="?attr/actionBarSize"/>
 
-    <Button
-        android:id="@+id/btnProximo"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btnProximo"/>
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:gravity="center_vertical|center_horizontal">
 
-    <Button
-        android:id="@+id/btnPostos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btnPostos"/>
+        <EditText
+            android:id="@+id/edtNascimento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/edtNascimento"/>
+
+        <Button
+            android:id="@+id/btnProximo"
+            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_height="wrap_content"
+            android:text="@string/btnProximo"/>
+    </LinearLayout>
+
 </LinearLayout>
