--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#5699d4</color>
+    <color name="colorPrimaryDark">#08539d</color>
+    <color name="colorAccent">#d2e164</color>
     <color name="red">#ff0000</color>
     <color name="green">#009900</color>
 </resources>
